# puls-diskinfo

./: .gitignore  README.md  meson.build  meson.options
.github/workflows/: build.yml
data/: io.github.puls.diskinfo.desktop  io.github.puls.diskinfo.metainfo.xml  io.github.puls.diskinfo.policy  meson.build  puls-diskinfo.gresource.xml  style.css
debian/: changelog  control  copyright
helper/: meson.build  puls-diskinfo-helper.c
packaging/: build-appimage.sh  build-binary.sh  build-deb.sh
src/: main.c  meson.build  puls-about-dialog.c  puls-about-dialog.h  puls-application.c  puls-application.h  puls-benchmark.c  puls-benchmark.h  puls-disk-info-view.c  puls-disk-info-view.h  puls-disk-manager.c  puls-disk-manager.h  puls-disk-selector.c  puls-disk-selector.h  puls-health-indicator.c  puls-health-indicator.h  puls-preferences-window.c  puls-preferences-window.h  puls-settings.c  puls-settings.h  puls-smart-data.c  puls-smart-data.h  puls-smart-parser.c  puls-smart-parser.h  puls-smart-table.c  puls-smart-table.h  puls-temperature-widget.c  puls-temperature-widget.h  puls-utils.c  puls-utils.h  puls-window.c  puls-window.h
